# deepai

./: activation_gradients_batchNorm.ipynb  baseai.py  bigram_language_model.ipynb  gpt.py  gpt2.ipynb  gpt2.py  gpt_tokenizer.ipynb  hellaswag.py  pyproject.toml  reproduce_gpt_2.py
data/: blog.txt
